fixed overflow

--- a/client/components/StreamInfo/Library.css
+++ b/client/components/StreamInfo/Library.css
@@ -1,7 +1,9 @@
 #library {
+  height: 100px;
   margin-left: 5px;
   margin-bottom: 20px;
   flex: 0 auto;
   position: absolute;
   bottom: 0;
+  overflow-y: scroll;
 }
